--- a/templates/index.html
+++ b/templates/index.html
@@ -4,26 +4,28 @@
 {% block title %}HitSearch{% endblock %}
 
 {% block page_content %}
+<div id="content">
     <div class="page-header">
         <h1>HitSearch</h1>
     </div>
-    {{ wtf.quick_form(form) }}
+    {{ wtf.quick_form(form, method="get", action="/submit") }}
     {% if result %}
     <h3>
         Hab ihn gefunden. Du musst diesen Links folgen {{ result }}.
     </h3>
     {% endif %}
+</div>
+<div class="modal"></div>
+{% endblock %}
+<div id="loading"></div>
+
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/loading.css') }}">
 {% endblock %}
 
-<!--<head>
-    <meta charset="UTF-8">
-    <title>HitSearch</title>
-</head>
-<body>
-    <h1>HitSearch</h1>
-    <form action="" methode="post">
-        <input type="text," name="Wiki Url">
-        <input type="submit" value="Suche">
-    </form>
-</body>
-</html>-->
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript" src="{{ url_for('static', filename='script/loading.js', _external=True) }}"></script>
+{% endblock %}
+
